ASN_3/parser.output
Terminals unused in grammar

    FIRSTOP
    LASTOP
    LASTTERM


State 0 conflicts: 1 shift/reduce
State 33 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: precompList declList

    2 precompList: precompList PRECOMPILER
    3            | PRECOMPILER
    4            | ε

    5 declList: declList decl
    6         | decl

    7 decl: varDecl
    8     | funDecl

    9 varDecl: typeSpec varDeclList ';'

   10 scopedVarDecl: STATIC typeSpec varDeclList ';'
   11              | typeSpec varDeclList ';'

   12 varDeclList: varDeclList ',' varDeclInit
   13            | varDeclInit

   14 varDeclInit: varDeclId
   15            | varDeclId ':' simpleExp

   16 varDeclId: ID
   17          | ID '[' NUMCONST ']'

   18 typeSpec: INT
   19         | BOOL
   20         | CHAR

   21 funDecl: typeSpec ID '(' parms ')' stmt
   22        | ID '(' parms ')' stmt

   23 parms: parmList
   24      | ε

   25 parmList: parmList ',' parmTypeList
   26         | parmTypeList

   27 parmTypeList: typeSpec parmIdList
   28             | parmId

   29 parmIdList: parmIdList ',' parmId
   30           | parmId

   31 parmId: ID
   32       | ID '[' ']'

   33 stmt: matched
   34     | unmatched

   35 matched: IF simpleExp THEN matched ELSE matched
   36        | WHILE simpleExp DO matched
   37        | FOR ID '=' iterRange DO matched
   38        | expstmt
   39        | compoundstmt
   40        | returnstmt
   41        | breakstmt

   42 iterRange: simpleExp TO simpleExp
   43          | simpleExp TO simpleExp BY simpleExp

   44 unmatched: IF simpleExp THEN stmt
   45          | IF simpleExp THEN matched ELSE unmatched
   46          | WHILE simpleExp DO unmatched
   47          | FOR ID '=' iterRange DO unmatched

   48 expstmt: exp ';'
   49        | ';'

   50 compoundstmt: '{' localDecls stmtList '}'

   51 localDecls: localDecls scopedVarDecl
   52           | ε

   53 stmtList: stmtList stmt
   54         | ε

   55 returnstmt: RETURN ';'
   56           | RETURN exp ';'

   57 breakstmt: BREAK ';'

   58 exp: mutable assignop exp
   59    | mutable INC
   60    | mutable DEC
   61    | simpleExp
   62    | mutable assignop error

   63 assignop: '='
   64         | ADDASS
   65         | SUBASS
   66         | MULASS
   67         | DIVASS

   68 simpleExp: simpleExp OR andExp
   69          | andExp

   70 andExp: andExp AND unaryRelExp
   71       | unaryRelExp

   72 unaryRelExp: NOT unaryRelExp
   73            | relExp

   74 relExp: minmaxExp relop minmaxExp
   75       | minmaxExp

   76 relop: LEQ
   77      | '<'
   78      | '>'
   79      | GEQ
   80      | EQ
   81      | NEQ

   82 minmaxExp: minmaxExp minmaxop sumExp
   83          | sumExp

   84 minmaxop: MAX
   85         | MIN

   86 sumExp: sumExp sumop mulExp
   87       | mulExp

   88 sumop: '+'
   89      | '-'

   90 mulExp: mulExp mulop unaryExp
   91       | unaryExp

   92 mulop: '*'
   93      | '/'
   94      | '%'

   95 unaryExp: unaryop unaryExp
   96         | factor

   97 unaryop: '-'
   98        | '*'
   99        | '?'

  100 factor: immutable
  101       | mutable

  102 mutable: ID
  103        | ID '[' exp ']'

  104 immutable: '(' exp ')'
  105          | call
  106          | constant

  107 call: ID '(' args ')'

  108 args: argList
  109     | ε

  110 argList: argList ',' exp
  111        | exp

  112 constant: NUMCONST
  113         | CHARCONST
  114         | STRINGCONST
  115         | BOOLCONST


Terminals, with rules where they appear

    $end (0) 0
    '%' <Token_Data> (37) 94
    '(' <Token_Data> (40) 21 22 104 107
    ')' <Token_Data> (41) 21 22 104 107
    '*' <Token_Data> (42) 92 98
    '+' <Token_Data> (43) 88
    ',' <Token_Data> (44) 12 25 29 110
    '-' <Token_Data> (45) 89 97
    '/' <Token_Data> (47) 93
    ':' <Token_Data> (58) 15
    ';' <Token_Data> (59) 9 10 11 48 49 55 56 57
    '<' <Token_Data> (60) 77
    '=' <Token_Data> (61) 37 47 63
    '>' <Token_Data> (62) 78
    '?' <Token_Data> (63) 99
    '[' <Token_Data> (91) 17 32 103
    ']' <Token_Data> (93) 17 32 103
    '{' <Token_Data> (123) 50
    '}' <Token_Data> (125) 50
    error (256) 62
    FIRSTOP <Token_Data> (258)
    ADDASS <Token_Data> (259) 64
    DIVASS <Token_Data> (260) 67
    MULASS <Token_Data> (261) 66
    SUBASS <Token_Data> (262) 65
    AND <Token_Data> (263) 70
    OR <Token_Data> (264) 68
    NOT <Token_Data> (265) 72
    EQ <Token_Data> (266) 80
    GEQ <Token_Data> (267) 79
    LEQ <Token_Data> (268) 76
    NEQ <Token_Data> (269) 81
    MIN <Token_Data> (270) 85
    MAX <Token_Data> (271) 84
    INC <Token_Data> (272) 59
    DEC <Token_Data> (273) 60
    PRECOMPILER <Token_Data> (274) 2 3
    LASTOP <Token_Data> (275)
    IF <Token_Data> (276) 35 44 45
    BOOL <Token_Data> (277) 19
    THEN <Token_Data> (278) 35 44 45
    ELSE <Token_Data> (279) 35 45
    FOR <Token_Data> (280) 37 47
    INT <Token_Data> (281) 18
    BY <Token_Data> (282) 43
    TO <Token_Data> (283) 42 43
    RETURN <Token_Data> (284) 55 56
    STATIC <Token_Data> (285) 10
    DO <Token_Data> (286) 36 37 46 47
    WHILE <Token_Data> (287) 36 46
    BREAK <Token_Data> (288) 57
    CHAR <Token_Data> (289) 20
    ID <Token_Data> (290) 16 17 21 22 31 32 37 47 102 103 107
    BOOLCONST <Token_Data> (291) 115
    NUMCONST <Token_Data> (292) 17 112
    CHARCONST <Token_Data> (293) 113
    STRINGCONST <Token_Data> (294) 114
    LASTTERM <Token_Data> (295)


Nonterminals, with rules where they appear

    $accept (59)
        on left: 0
    program <tree> (60)
        on left: 1
        on right: 0
    precompList <tree> (61)
        on left: 2 3 4
        on right: 1 2
    declList <tree> (62)
        on left: 5 6
        on right: 1 5
    decl <tree> (63)
        on left: 7 8
        on right: 5 6
    varDecl <tree> (64)
        on left: 9
        on right: 7
    scopedVarDecl <tree> (65)
        on left: 10 11
        on right: 51
    varDeclList <tree> (66)
        on left: 12 13
        on right: 9 10 11 12
    varDeclInit <tree> (67)
        on left: 14 15
        on right: 12 13
    varDeclId <tree> (68)
        on left: 16 17
        on right: 14 15
    typeSpec <type> (69)
        on left: 18 19 20
        on right: 9 10 11 21 27
    funDecl <tree> (70)
        on left: 21 22
        on right: 8
    parms <tree> (71)
        on left: 23 24
        on right: 21 22
    parmList <tree> (72)
        on left: 25 26
        on right: 23 25
    parmTypeList <tree> (73)
        on left: 27 28
        on right: 25 26
    parmIdList <tree> (74)
        on left: 29 30
        on right: 27 29
    parmId <tree> (75)
        on left: 31 32
        on right: 28 29 30
    stmt <tree> (76)
        on left: 33 34
        on right: 21 22 44 53
    matched <tree> (77)
        on left: 35 36 37 38 39 40 41
        on right: 33 35 36 37 45
    iterRange <tree> (78)
        on left: 42 43
        on right: 37 47
    unmatched <tree> (79)
        on left: 44 45 46 47
        on right: 34 45 46 47
    expstmt <tree> (80)
        on left: 48 49
        on right: 38
    compoundstmt <tree> (81)
        on left: 50
        on right: 39
    localDecls <tree> (82)
        on left: 51 52
        on right: 50 51
    stmtList <tree> (83)
        on left: 53 54
        on right: 50 53
    returnstmt <tree> (84)
        on left: 55 56
        on right: 40
    breakstmt <tree> (85)
        on left: 57
        on right: 41
    exp <tree> (86)
        on left: 58 59 60 61 62
        on right: 48 56 58 103 104 110 111
    assignop <Token_Data> (87)
        on left: 63 64 65 66 67
        on right: 58 62
    simpleExp <tree> (88)
        on left: 68 69
        on right: 15 35 36 42 43 44 45 46 61 68
    andExp <tree> (89)
        on left: 70 71
        on right: 68 69 70
    unaryRelExp <tree> (90)
        on left: 72 73
        on right: 70 71 72
    relExp <tree> (91)
        on left: 74 75
        on right: 73
    relop <Token_Data> (92)
        on left: 76 77 78 79 80 81
        on right: 74
    minmaxExp <tree> (93)
        on left: 82 83
        on right: 74 75 82
    minmaxop <Token_Data> (94)
        on left: 84 85
        on right: 82
    sumExp <tree> (95)
        on left: 86 87
        on right: 82 83 86
    sumop <Token_Data> (96)
        on left: 88 89
        on right: 86
    mulExp <tree> (97)
        on left: 90 91
        on right: 86 87 90
    mulop <Token_Data> (98)
        on left: 92 93 94
        on right: 90
    unaryExp <tree> (99)
        on left: 95 96
        on right: 90 91 95
    unaryop <Token_Data> (100)
        on left: 97 98 99
        on right: 95
    factor <tree> (101)
        on left: 100 101
        on right: 96
    mutable <tree> (102)
        on left: 102 103
        on right: 58 59 60 62 101
    immutable <tree> (103)
        on left: 104 105 106
        on right: 100
    call <tree> (104)
        on left: 107
        on right: 105
    args <tree> (105)
        on left: 108 109
        on right: 107
    argList <tree> (106)
        on left: 110 111
        on right: 108 110
    constant <tree> (107)
        on left: 112 113 114 115
        on right: 106


State 0

    0 $accept: • program $end

    PRECOMPILER  shift, and go to state 1

    PRECOMPILER  [reduce using rule 4 (precompList)]
    $default     reduce using rule 4 (precompList)

    program      go to state 2
    precompList  go to state 3


State 1

    3 precompList: PRECOMPILER •

    $default  reduce using rule 3 (precompList)


State 2

    0 $accept: program • $end

    $end  shift, and go to state 4


State 3

    1 program: precompList • declList
    2 precompList: precompList • PRECOMPILER

    PRECOMPILER  shift, and go to state 5
    BOOL         shift, and go to state 6
    INT          shift, and go to state 7
    CHAR         shift, and go to state 8
    ID           shift, and go to state 9

    declList  go to state 10
    decl      go to state 11
    varDecl   go to state 12
    typeSpec  go to state 13
    funDecl   go to state 14


State 4

    0 $accept: program $end •

    $default  accept


State 5

    2 precompList: precompList PRECOMPILER •

    $default  reduce using rule 2 (precompList)


State 6

   19 typeSpec: BOOL •

    $default  reduce using rule 19 (typeSpec)


State 7

   18 typeSpec: INT •

    $default  reduce using rule 18 (typeSpec)


State 8

   20 typeSpec: CHAR •

    $default  reduce using rule 20 (typeSpec)


State 9

   22 funDecl: ID • '(' parms ')' stmt

    '('  shift, and go to state 15


State 10

    1 program: precompList declList •
    5 declList: declList • decl

    BOOL  shift, and go to state 6
    INT   shift, and go to state 7
    CHAR  shift, and go to state 8
    ID    shift, and go to state 9

    $default  reduce using rule 1 (program)

    decl      go to state 16
    varDecl   go to state 12
    typeSpec  go to state 13
    funDecl   go to state 14


State 11

    6 declList: decl •

    $default  reduce using rule 6 (declList)


State 12

    7 decl: varDecl •

    $default  reduce using rule 7 (decl)


State 13

    9 varDecl: typeSpec • varDeclList ';'
   21 funDecl: typeSpec • ID '(' parms ')' stmt

    ID  shift, and go to state 17

    varDeclList  go to state 18
    varDeclInit  go to state 19
    varDeclId    go to state 20


State 14

    8 decl: funDecl •

    $default  reduce using rule 8 (decl)


State 15

   22 funDecl: ID '(' • parms ')' stmt

    BOOL  shift, and go to state 6
    INT   shift, and go to state 7
    CHAR  shift, and go to state 8
    ID    shift, and go to state 21

    $default  reduce using rule 24 (parms)

    typeSpec      go to state 22
    parms         go to state 23
    parmList      go to state 24
    parmTypeList  go to state 25
    parmId        go to state 26


State 16

    5 declList: declList decl •

    $default  reduce using rule 5 (declList)


State 17

   16 varDeclId: ID •
   17          | ID • '[' NUMCONST ']'
   21 funDecl: typeSpec ID • '(' parms ')' stmt

    '['  shift, and go to state 27
    '('  shift, and go to state 28

    $default  reduce using rule 16 (varDeclId)


State 18

    9 varDecl: typeSpec varDeclList • ';'
   12 varDeclList: varDeclList • ',' varDeclInit

    ';'  shift, and go to state 29
    ','  shift, and go to state 30


State 19

   13 varDeclList: varDeclInit •

    $default  reduce using rule 13 (varDeclList)


State 20

   14 varDeclInit: varDeclId •
   15            | varDeclId • ':' simpleExp

    ':'  shift, and go to state 31

    $default  reduce using rule 14 (varDeclInit)


State 21

   31 parmId: ID •
   32       | ID • '[' ']'

    '['  shift, and go to state 32

    $default  reduce using rule 31 (parmId)


State 22

   27 parmTypeList: typeSpec • parmIdList

    ID  shift, and go to state 21

    parmIdList  go to state 33
    parmId      go to state 34


State 23

   22 funDecl: ID '(' parms • ')' stmt

    ')'  shift, and go to state 35


State 24

   23 parms: parmList •
   25 parmList: parmList • ',' parmTypeList

    ','  shift, and go to state 36

    $default  reduce using rule 23 (parms)


State 25

   26 parmList: parmTypeList •

    $default  reduce using rule 26 (parmList)


State 26

   28 parmTypeList: parmId •

    $default  reduce using rule 28 (parmTypeList)


State 27

   17 varDeclId: ID '[' • NUMCONST ']'

    NUMCONST  shift, and go to state 37


State 28

   21 funDecl: typeSpec ID '(' • parms ')' stmt

    BOOL  shift, and go to state 6
    INT   shift, and go to state 7
    CHAR  shift, and go to state 8
    ID    shift, and go to state 21

    $default  reduce using rule 24 (parms)

    typeSpec      go to state 22
    parms         go to state 38
    parmList      go to state 24
    parmTypeList  go to state 25
    parmId        go to state 26


State 29

    9 varDecl: typeSpec varDeclList ';' •

    $default  reduce using rule 9 (varDecl)


State 30

   12 varDeclList: varDeclList ',' • varDeclInit

    ID  shift, and go to state 39

    varDeclInit  go to state 40
    varDeclId    go to state 20


State 31

   15 varDeclInit: varDeclId ':' • simpleExp

    NOT          shift, and go to state 41
    '*'          shift, and go to state 42
    '-'          shift, and go to state 43
    '?'          shift, and go to state 44
    ID           shift, and go to state 45
    BOOLCONST    shift, and go to state 46
    NUMCONST     shift, and go to state 47
    CHARCONST    shift, and go to state 48
    STRINGCONST  shift, and go to state 49
    '('          shift, and go to state 50

    simpleExp    go to state 51
    andExp       go to state 52
    unaryRelExp  go to state 53
    relExp       go to state 54
    minmaxExp    go to state 55
    sumExp       go to state 56
    mulExp       go to state 57
    unaryExp     go to state 58
    unaryop      go to state 59
    factor       go to state 60
    mutable      go to state 61
    immutable    go to state 62
    call         go to state 63
    constant     go to state 64


State 32

   32 parmId: ID '[' • ']'

    ']'  shift, and go to state 65


State 33

   27 parmTypeList: typeSpec parmIdList •
   29 parmIdList: parmIdList • ',' parmId

    ','  shift, and go to state 66

    ','       [reduce using rule 27 (parmTypeList)]
    $default  reduce using rule 27 (parmTypeList)


State 34

   30 parmIdList: parmId •

    $default  reduce using rule 30 (parmIdList)


State 35

   22 funDecl: ID '(' parms ')' • stmt

    NOT          shift, and go to state 41
    '*'          shift, and go to state 42
    '-'          shift, and go to state 43
    '?'          shift, and go to state 44
    IF           shift, and go to state 67
    FOR          shift, and go to state 68
    RETURN       shift, and go to state 69
    WHILE        shift, and go to state 70
    BREAK        shift, and go to state 71
    ID           shift, and go to state 45
    BOOLCONST    shift, and go to state 46
    NUMCONST     shift, and go to state 47
    CHARCONST    shift, and go to state 48
    STRINGCONST  shift, and go to state 49
    '('          shift, and go to state 50
    '{'          shift, and go to state 72
    ';'          shift, and go to state 73
